--- a/.github/workflows/discord.yml
+++ b/.github/workflows/discord.yml
@@ -2,15 +2,14 @@ name: Notify Discord on New Issue
 on:
   issues:
     types: [opened]
-env:
-  DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-
 jobs:
   notify:
     runs-on: ubuntu-latest
     steps:
       - name: Notify Discord
-	uses: Ilshidur/action-discord@master
+        uses: Ilshidur/action-discord@0.3.2
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
         with:
           args: 'New Issue Created!\nTitle: ${{ github.event.issue.title }}\nAuthor: ${{ github.event.issue.user.login }}\nLink: ${{ github.event.issue.html_url }}'
 
