--- a/.github/workflows/discord.yml
+++ b/.github/workflows/discord.yml
@@ -7,9 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Notify Discord
-        env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-        uses: Ilshidur/action-discord@0.3.2
+        uses: tsickert/discord-webhook@v5.3.0
         with:
-          args: 'New Issue Created!\nTitle: ${{ github.event.issue.title }}\nAuthor: ${{ github.event.issue.user.login }}\nLink: ${{ github.event.issue.html_url }}'
+          webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
+          content: 'New Issue Created!\nTitle: ${{ github.event.issue.title }}\nAuthor: ${{ github.event.issue.user.login }}\nLink: ${{ github.event.issue.html_url }}'
 
