--- a/.github/workflows/discord.yml
+++ b/.github/workflows/discord.yml
@@ -10,5 +10,5 @@ jobs:
         uses: tsickert/discord-webhook@v5.3.0
         with:
           webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
-          content: 'New Issue Created!\nTitle: ${{ github.event.issue.title }}\nAuthor: ${{ github.event.issue.user.login }}\nLink: ${{ github.event.issue.html_url }}'
+          content: 'New Issue Created!\nTitle: ${{ github.event.issue.title }}'
 
