--- a/.github/workflows/discord.yml
+++ b/.github/workflows/discord.yml
@@ -6,6 +6,7 @@ jobs:
   notify:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - name: Notify Discord
         uses: tsickert/discord-webhook@v5.3.0
         with:
