--- a/.github/workflows/discord.yml
+++ b/.github/workflows/discord.yml
@@ -7,9 +7,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Notify Discord
-        uses: tsickert/discord-webhook@v5.3.0
+      - name: Test Custom
+        uses: rjstone/discord-webhook-notify@v1
         with:
-          webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
-          content: 'New Issue Created!\nTitle: ${{ github.event.issue.title }}'
-
+            severity: info
+            username: CustomUsername
+            color: '#ff00aa'
+            avatarUrl: https://github.githubassets.com/images/modules/logos_page/Octocat.png
+            description: This is a custom description.
+            details: 'Custom details: Somebody set up us the bomb.'
+            footer: This is a footer.
+            text: This is where text goes.
+            webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
